--- a/index.html
+++ b/index.html
@@ -1,113 +1,111 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive 3D Video Cube</title>
-  <style>
-    body { margin: 0; overflow: hidden; }
-    .cube { position: absolute; width: 300px; height: 300px; transform-style: preserve-3d; transform: rotateX(0deg) rotateY(0deg); transition: transform 0.5s; }
-    .face { position: absolute; width: 100%; height: 100%; background: #000; display: flex; justify-content: center; align-items: center; }
-    .front  { transform: translateZ(150px); }
-    .back   { transform: rotateY(180deg) translateZ(150px); }
-    .left   { transform: rotateY(-90deg) translateZ(150px); }
-    .right  { transform: rotateY(90deg) translateZ(150px); }
-    .top    { transform: rotateX(90deg) translateZ(150px); }
-    .bottom { transform: rotateX(-90deg) translateZ(150px); }
-    video { width: 100%; height: 100%; object-fit: cover; }
-  </style>
-</head>
-<body>
-  <div class="cube" id="cube">
-    <div class="face front"><video id="front" muted loop><source src="https://www.w3schools.com/html/movie.mp4" type="video/mp4"></video></div>
-    <div class="face back"><video id="back" muted loop><source src="https://www.w3schools.com/html/movie.mp4" type="video/mp4"></video></div>
-    <div class="face left"><video id="left" muted loop><source src="https://www.w3schools.com/html/movie.mp4" type="video/mp4"></video></div>
-    <div class="face right"><video id="right" muted loop><source src="https://www.w3schools.com/html/movie.mp4" type="video/mp4"></video></div>
-    <div class="face top"><video id="top" muted loop><source src="https://www.w3schools.com/html/movie.mp4" type="video/mp4"></video></div>
-    <div class="face bottom"><video id="bottom" muted loop><source src="https://www.w3schools.com/html/movie.mp4" type="video/mp4"></video></div>
-  </div>
+import React, { useRef, useEffect } from 'react';
+import * as THREE from 'three';
+import { OrbitControls } from 'three/examples/jsm/controls/OrbitControls';
 
-  <script>
-    const cube = document.getElementById('cube');
-    const videos = document.querySelectorAll('video');
-    let isDragging = false, startX, startY, currentX = 0, currentY = 0, scale = 1;
+export default function VideoCube() {
+  const mountRef = useRef(null);
+  const videoRefs = useRef([]);
 
-    // Center the cube initially
-    cube.style.left = `${(window.innerWidth - cube.offsetWidth) / 2}px`;
-    cube.style.top = `${(window.innerHeight - cube.offsetHeight) / 2}px`;
+  useEffect(() => {
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, mountRef.current.clientWidth / mountRef.current.clientHeight, 0.1, 1000);
+    camera.position.z = 5;
 
-    // Function to pause all videos and mute them
-    function pauseAndMuteAllVideos() {
-      videos.forEach(video => {
-        video.pause();
-        video.muted = true;
-      });
-    }
+    const renderer = new THREE.WebGLRenderer({ antialias: true });
+    renderer.setSize(mountRef.current.clientWidth, mountRef.current.clientHeight);
+    mountRef.current.appendChild(renderer.domElement);
 
-    // Function to play the video on a specific face and unmute it
-    function playVideoOnFace(face) {
-      pauseAndMuteAllVideos();
-      const video = document.getElementById(face);
-      if (video) {
-        video.muted = false;  // Unmute the video
-        video.play();
+    const controls = new OrbitControls(camera, renderer.domElement);
+    controls.enableZoom = false;
+    controls.enablePan = false;
+    controls.rotateSpeed = 0.8;
+    controls.enableDamping = true;
+    controls.dampingFactor = 0.1;
+
+    const geometry = new THREE.BoxGeometry(2, 2, 2);
+    const videoSources = [
+      'https://www.w3schools.com/html/mov_bbb.mp4',
+      'https://samplelib.com/lib/preview/mp4/sample-5s.mp4',
+      'https://media.w3.org/2010/05/sintel/trailer.mp4',
+      'https://media.w3.org/2010/05/bunny/trailer.mp4',
+      'https://media.w3.org/2010/05/video/movie_300.mp4',
+      'https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4'
+    ];
+
+    const videoElements = videoSources.map((src, i) => {
+      const video = document.createElement('video');
+      video.src = src;
+      video.crossOrigin = 'anonymous';
+      video.loop = true;
+      video.muted = true;
+      video.playsInline = true;
+      video.load();
+      videoRefs.current.push(video);
+      return video;
+    });
+
+    const materials = videoElements.map((video) => {
+      const texture = new THREE.VideoTexture(video);
+      texture.minFilter = THREE.LinearFilter;
+      texture.magFilter = THREE.LinearFilter;
+      texture.format = THREE.RGBFormat;
+      return new THREE.MeshBasicMaterial({ map: texture });
+    });
+
+    const cube = new THREE.Mesh(geometry, materials);
+    scene.add(cube);
+
+    const animate = () => {
+      requestAnimationFrame(animate);
+      controls.update();
+      updateVideoPlayback(camera, cube);
+      renderer.render(scene, camera);
+    };
+
+    animate();
+
+    return () => {
+      mountRef.current.removeChild(renderer.domElement);
+      videoRefs.current.forEach(video => video.pause());
+    };
+  }, []);
+
+  const updateVideoPlayback = (camera, cube) => {
+    let maxDot = -Infinity;
+    let frontFaceIndex = -1;
+
+    const faceNormals = [
+      new THREE.Vector3(1, 0, 0),
+      new THREE.Vector3(-1, 0, 0),
+      new THREE.Vector3(0, 1, 0),
+      new THREE.Vector3(0, -1, 0),
+      new THREE.Vector3(0, 0, 1),
+      new THREE.Vector3(0, 0, -1)
+    ];
+
+    faceNormals.forEach((normal, index) => {
+      const rotatedNormal = normal.clone().applyQuaternion(cube.quaternion);
+      const dot = rotatedNormal.dot(camera.getWorldDirection(new THREE.Vector3()));
+      if (dot > maxDot) {
+        maxDot = dot;
+        frontFaceIndex = index;
       }
-    }
+    });
 
-    // Function to detect and play the video of the front-facing face
-    function detectFrontFace() {
-      const rect = cube.getBoundingClientRect();
-      const centerX = rect.left + rect.width / 2;
-      const centerY = rect.top + rect.height / 2;
-
-      let closestFace = null;
-      let maxDotProduct = -Infinity;
-      const faces = ['front', 'back', 'left', 'right', 'top', 'bottom'];
-
-      faces.forEach(face => {
-        const element = document.getElementById(face);
-        const transformMatrix = window.getComputedStyle(element).transform;
-        const matrix = new WebKitCSSMatrix(transformMatrix);
-        const normal = { x: matrix.m11, y: matrix.m12, z: matrix.m13 };
-        const dotProduct = normal.x * (centerX - window.innerWidth / 2) + normal.y * (centerY - window.innerHeight / 2);
-
-        if (dotProduct > maxDotProduct) {
-          maxDotProduct = dotProduct;
-          closestFace = face;
+    videoRefs.current.forEach((video, index) => {
+      if (index === frontFaceIndex) {
+        if (video.paused) {
+          video.muted = false;
+          video.play();
         }
-      });
-
-      playVideoOnFace(closestFace);
-    }
-
-    // Continuously check which face is facing the user
-    setInterval(detectFrontFace, 100);
-
-    // Mouse events for rotating the cube
-    window.addEventListener('mousedown', (e) => {
-      isDragging = true;
-      startX = e.clientX - currentX;
-      startY = e.clientY - currentY;
-      e.preventDefault();
-    });
-
-    window.addEventListener('mousemove', (e) => {
-      if (isDragging) {
-        currentX = e.clientX - startX;
-        currentY = e.clientY - startY;
-        cube.style.transform = `rotateX(${currentY / 2}deg) rotateY(${currentX / 2}deg)`;
+      } else {
+        if (!video.paused) {
+          video.pause();
+        }
+        video.muted = true;
       }
     });
+  };
 
-    window.addEventListener('mouseup', () => {
-      isDragging = false;
-    });
-
-    window.addEventListener('wheel', (e) => {
-      scale += e.deltaY * -0.01;
-      scale = Math.min(Math.max(0.5, scale), 3);
-      cube.style.transform = `scale(${scale}) rotateX(${currentY / 2}deg) rotateY(${currentX / 2}deg)`;
-    });
-  </script>
-</body>
-</html>
+  return <div ref={mountRef} style={{ width: '100vw', height: '100vh' }} />;
+}
