--- a/index.html
+++ b/index.html
@@ -1,111 +1,139 @@
-import React, { useRef, useEffect } from 'react';
-import * as THREE from 'three';
-import { OrbitControls } from 'three/examples/jsm/controls/OrbitControls';
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>3D Video Cube</title>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background: #000;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      perspective: 1000px;
+    }
 
-export default function VideoCube() {
-  const mountRef = useRef(null);
-  const videoRefs = useRef([]);
+    #cube-container {
+      width: 300px;
+      height: 300px;
+      position: relative;
+      transform-style: preserve-3d;
+      transition: transform 1s ease-in-out;
+    }
 
-  useEffect(() => {
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, mountRef.current.clientWidth / mountRef.current.clientHeight, 0.1, 1000);
-    camera.position.z = 5;
+    .face {
+      position: absolute;
+      width: 300px;
+      height: 300px;
+      background: #000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
-    const renderer = new THREE.WebGLRenderer({ antialias: true });
-    renderer.setSize(mountRef.current.clientWidth, mountRef.current.clientHeight);
-    mountRef.current.appendChild(renderer.domElement);
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  </style>
+</head>
+<body>
+  <div id="cube-container">
+    <div class="face" style="transform: rotateY(0deg) translateZ(150px);">
+      <video src="https://www.w3schools.com/html/mov_bbb.mp4" muted loop></video>
+    </div>
+    <div class="face" style="transform: rotateY(90deg) translateZ(150px);">
+      <video src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" muted loop></video>
+    </div>
+    <div class="face" style="transform: rotateY(180deg) translateZ(150px);">
+      <video src="https://media.w3.org/2010/05/sintel/trailer.mp4" muted loop></video>
+    </div>
+    <div class="face" style="transform: rotateY(-90deg) translateZ(150px);">
+      <video src="https://media.w3.org/2010/05/bunny/movie.mp4" muted loop></video>
+    </div>
+    <div class="face" style="transform: rotateX(90deg) translateZ(150px);">
+      <video src="https://media.w3.org/2010/05/video/movie_300.mp4" muted loop></video>
+    </div>
+    <div class="face" style="transform: rotateX(-90deg) translateZ(150px);">
+      <video src="https://media.w3.org/2010/05/video/movie_700.mp4" muted loop></video>
+    </div>
+  </div>
 
-    const controls = new OrbitControls(camera, renderer.domElement);
-    controls.enableZoom = false;
-    controls.enablePan = false;
-    controls.rotateSpeed = 0.8;
-    controls.enableDamping = true;
-    controls.dampingFactor = 0.1;
+  <script>
+    const cube = document.getElementById('cube-container');
+    const videos = cube.querySelectorAll('video');
+    let xRotation = 0;
+    let yRotation = 0;
+    let scale = 1;
+    let isDragging = false;
+    let lastX, lastY;
 
-    const geometry = new THREE.BoxGeometry(2, 2, 2);
-    const videoSources = [
-      'https://www.w3schools.com/html/mov_bbb.mp4',
-      'https://samplelib.com/lib/preview/mp4/sample-5s.mp4',
-      'https://media.w3.org/2010/05/sintel/trailer.mp4',
-      'https://media.w3.org/2010/05/bunny/trailer.mp4',
-      'https://media.w3.org/2010/05/video/movie_300.mp4',
-      'https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4'
-    ];
+    function updateCubeTransform() {
+      cube.style.transform = `scale(${scale}) rotateX(${xRotation}deg) rotateY(${yRotation}deg)`;
+      updateVideoPlayback();
+    }
 
-    const videoElements = videoSources.map((src, i) => {
-      const video = document.createElement('video');
-      video.src = src;
-      video.crossOrigin = 'anonymous';
-      video.loop = true;
-      video.muted = true;
-      video.playsInline = true;
-      video.load();
-      videoRefs.current.push(video);
-      return video;
-    });
+    function updateVideoPlayback() {
+      let faceAngles = [
+        [0, 0], [0, 90], [0, 180], [0, -90], [90, 0], [-90, 0]
+      ];
+      let minDiff = Infinity;
+      let activeIndex = 0;
 
-    const materials = videoElements.map((video) => {
-      const texture = new THREE.VideoTexture(video);
-      texture.minFilter = THREE.LinearFilter;
-      texture.magFilter = THREE.LinearFilter;
-      texture.format = THREE.RGBFormat;
-      return new THREE.MeshBasicMaterial({ map: texture });
-    });
-
-    const cube = new THREE.Mesh(geometry, materials);
-    scene.add(cube);
-
-    const animate = () => {
-      requestAnimationFrame(animate);
-      controls.update();
-      updateVideoPlayback(camera, cube);
-      renderer.render(scene, camera);
-    };
-
-    animate();
-
-    return () => {
-      mountRef.current.removeChild(renderer.domElement);
-      videoRefs.current.forEach(video => video.pause());
-    };
-  }, []);
-
-  const updateVideoPlayback = (camera, cube) => {
-    let maxDot = -Infinity;
-    let frontFaceIndex = -1;
-
-    const faceNormals = [
-      new THREE.Vector3(1, 0, 0),
-      new THREE.Vector3(-1, 0, 0),
-      new THREE.Vector3(0, 1, 0),
-      new THREE.Vector3(0, -1, 0),
-      new THREE.Vector3(0, 0, 1),
-      new THREE.Vector3(0, 0, -1)
-    ];
-
-    faceNormals.forEach((normal, index) => {
-      const rotatedNormal = normal.clone().applyQuaternion(cube.quaternion);
-      const dot = rotatedNormal.dot(camera.getWorldDirection(new THREE.Vector3()));
-      if (dot > maxDot) {
-        maxDot = dot;
-        frontFaceIndex = index;
-      }
-    });
-
-    videoRefs.current.forEach((video, index) => {
-      if (index === frontFaceIndex) {
-        if (video.paused) {
-          video.muted = false;
-          video.play();
+      faceAngles.forEach((angle, index) => {
+        let diff = Math.abs(angle[0] - ((xRotation % 360 + 360) % 360)) +
+                   Math.abs(angle[1] - ((yRotation % 360 + 360) % 360));
+        if (diff < minDiff) {
+          minDiff = diff;
+          activeIndex = index;
         }
-      } else {
-        if (!video.paused) {
-          video.pause();
-        }
-        video.muted = true;
-      }
-    });
-  };
+      });
 
-  return <div ref={mountRef} style={{ width: '100vw', height: '100vh' }} />;
-}
+      videos.forEach((vid, i) => {
+        if (i === activeIndex) {
+          vid.play();
+          vid.muted = false;
+        } else {
+          vid.pause();
+          vid.muted = true;
+        }
+      });
+    }
+
+    document.addEventListener('mousedown', (e) => {
+      isDragging = true;
+      lastX = e.clientX;
+      lastY = e.clientY;
+    });
+
+    document.addEventListener('mousemove', (e) => {
+      if (!isDragging) return;
+      let dx = e.clientX - lastX;
+      let dy = e.clientY - lastY;
+      yRotation += dx * 0.5;
+      xRotation -= dy * 0.5;
+      lastX = e.clientX;
+      lastY = e.clientY;
+      updateCubeTransform();
+    });
+
+    document.addEventListener('mouseup', () => {
+      isDragging = false;
+    });
+
+    document.addEventListener('wheel', (e) => {
+      e.preventDefault();
+      scale += e.deltaY * -0.001;
+      scale = Math.min(Math.max(0.5, scale), 2);
+      updateCubeTransform();
+    }, { passive: false });
+
+    window.onload = () => updateCubeTransform();
+  </script>
+</body>
+</html>
