--- a/index.html
+++ b/index.html
@@ -72,27 +72,42 @@
     let scale = 1;
     let isDragging = false;
     let lastX, lastY;
+    let velocityX = 0;
+    let velocityY = 0;
+    let momentumInterval;
 
     function updateCubeTransform() {
       cube.style.transform = `scale(${scale}) rotateX(${xRotation}deg) rotateY(${yRotation}deg)`;
+    }
+
+    function snapToNearestFace() {
+      const angles = [
+        [0, 0], [0, 90], [0, 180], [0, -90], [90, 0], [-90, 0]
+      ];
+      let minDist = Infinity;
+      let target = [0, 0];
+
+      angles.forEach(([x, y]) => {
+        const dx = ((xRotation - x + 360) % 360) - 180;
+        const dy = ((yRotation - y + 360) % 360) - 180;
+        const dist = Math.abs(dx) + Math.abs(dy);
+        if (dist < minDist) {
+          minDist = dist;
+          target = [x, y];
+        }
+      });
+
+      xRotation = target[0];
+      yRotation = target[1];
+      updateCubeTransform();
       updateVideoPlayback();
     }
 
     function updateVideoPlayback() {
-      let faceAngles = [
+      const angles = [
         [0, 0], [0, 90], [0, 180], [0, -90], [90, 0], [-90, 0]
       ];
-      let minDiff = Infinity;
-      let activeIndex = 0;
-
-      faceAngles.forEach((angle, index) => {
-        let diff = Math.abs(angle[0] - ((xRotation % 360 + 360) % 360)) +
-                   Math.abs(angle[1] - ((yRotation % 360 + 360) % 360));
-        if (diff < minDiff) {
-          minDiff = diff;
-          activeIndex = index;
-        }
-      });
+      const activeIndex = angles.findIndex(([x, y]) => x === xRotation && y === yRotation);
 
       videos.forEach((vid, i) => {
         if (i === activeIndex) {
@@ -105,16 +120,34 @@
       });
     }
 
+    function applyMomentum() {
+      momentumInterval = setInterval(() => {
+        if (Math.abs(velocityX) < 0.1 && Math.abs(velocityY) < 0.1) {
+          clearInterval(momentumInterval);
+          snapToNearestFace();
+          return;
+        }
+        xRotation += velocityY;
+        yRotation += velocityX;
+        velocityX *= 0.95;
+        velocityY *= 0.95;
+        updateCubeTransform();
+      }, 16);
+    }
+
     document.addEventListener('mousedown', (e) => {
       isDragging = true;
       lastX = e.clientX;
       lastY = e.clientY;
+      clearInterval(momentumInterval);
     });
 
     document.addEventListener('mousemove', (e) => {
       if (!isDragging) return;
       let dx = e.clientX - lastX;
       let dy = e.clientY - lastY;
+      velocityX = dx * 0.3;
+      velocityY = dy * 0.3;
       yRotation += dx * 0.5;
       xRotation -= dy * 0.5;
       lastX = e.clientX;
@@ -124,6 +157,7 @@
 
     document.addEventListener('mouseup', () => {
       isDragging = false;
+      applyMomentum();
     });
 
     document.addEventListener('wheel', (e) => {
@@ -133,7 +167,10 @@
       updateCubeTransform();
     }, { passive: false });
 
-    window.onload = () => updateCubeTransform();
+    window.onload = () => {
+      updateCubeTransform();
+      updateVideoPlayback();
+    };
   </script>
 </body>
 </html>
