--- a/index.html
+++ b/index.html
@@ -1,165 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>3D YouTube Cube</title>
+  <meta charset="UTF-8">
+  <title>YouTube Scroll Autoplay</title>
   <style>
-    body, html {
+    body {
       margin: 0;
       padding: 0;
-      overflow: hidden;
-      background: #000;
-      height: 100vh;
+      font-family: sans-serif;
+      background-color: #111;
+      color: #fff;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      perspective: 1000px;
     }
 
-    #cube-container {
-      width: 300px;
-      height: 300px;
+    header {
+      margin: 20px 0;
+      text-align: center;
+    }
+
+    header img {
+      max-width: 100%;
+      height: auto;
+    }
+
+    .video-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 0.25in; /* quarter inch gap */
+      max-width: 1200px;
+      padding: 20px;
+    }
+
+    .video-container {
+      flex: 1 1 calc(33.333% - 0.5in);
+      min-width: 300px;
+      max-width: 100%;
       position: relative;
-      transform-style: preserve-3d;
-      transition: transform 1s ease-in-out;
+      background: #222;
+      height: 200px;
+      overflow: hidden;
     }
 
-    .face {
-      position: absolute;
-      width: 300px;
-      height: 300px;
-      background: #000;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    iframe {
+    .video-container iframe {
       width: 100%;
       height: 100%;
       border: none;
     }
+
+    @media (max-width: 768px) {
+      .video-container {
+        flex: 1 1 100%;
+        height: 200px;
+      }
+    }
   </style>
 </head>
 <body>
-  <div id="cube-container">
-    <div class="face" style="transform: rotateY(0deg) translateZ(150px);">
-      <iframe src="https://www.youtube.com/embed/hrgcRAryUaY?enablejsapi=1" allow="autoplay"></iframe>
-    </div>
-    <div class="face" style="transform: rotateY(90deg) translateZ(150px);">
-      <iframe src="https://www.youtube.com/embed/9SBnKTBPpME?enablejsapi=1" allow="autoplay"></iframe>
-    </div>
-    <div class="face" style="transform: rotateY(180deg) translateZ(150px);">
-      <iframe src="https://www.youtube.com/embed/B2CpcHIxaOw?enablejsapi=1" allow="autoplay"></iframe>
-    </div>
-    <div class="face" style="transform: rotateY(-90deg) translateZ(150px);">
-      <iframe src="https://www.youtube.com/embed/dKlpKE7x7mY?enablejsapi=1" allow="autoplay"></iframe>
-    </div>
-    <div class="face" style="transform: rotateX(90deg) translateZ(150px);">
-      <iframe src="https://www.youtube.com/embed/eMiwRjiQpV4?enablejsapi=1" allow="autoplay"></iframe>
-    </div>
-    <div class="face" style="transform: rotateX(-90deg) translateZ(150px);">
-      <iframe src="https://www.youtube.com/embed/7r_3tZ0SzDc?enablejsapi=1" allow="autoplay"></iframe>
-    </div>
+
+  <header>
+    <!-- Replace this with your actual GIF -->
+    <img src="your-header.gif" alt="Header GIF">
+  </header>
+
+  <div class="video-grid">
+    <div class="video-container" data-video-id="hrgcRAryUaY"></div>
+    <div class="video-container" data-video-id="9SBnKTBPpME"></div>
+    <div class="video-container" data-video-id="B2CpcHIxaOw"></div>
+    <div class="video-container" data-video-id="dKlpKE7x7mY"></div>
+    <div class="video-container" data-video-id="eMiwRjiQpV4"></div>
+    <div class="video-container" data-video-id="7r_3tZ0SzDc"></div>
   </div>
 
   <script>
-    const cube = document.getElementById('cube-container');
-    const iframes = cube.querySelectorAll('iframe');
-    let xRotation = 0;
-    let yRotation = 0;
-    let scale = 1;
-    let isDragging = false;
-    let lastX, lastY;
-    let velocityX = 0;
-    let velocityY = 0;
-    let momentumInterval;
-    const angles = [
-      [0, 0], [0, 90], [0, 180], [0, -90], [90, 0], [-90, 0]
-    ];
+    const containers = document.querySelectorAll('.video-container');
 
-    function updateCubeTransform() {
-      cube.style.transform = `scale(${scale}) rotateX(${xRotation}deg) rotateY(${yRotation}deg)`;
-    }
-
-    function snapToNearestFace() {
-      let minDist = Infinity;
-      let target = [0, 0];
-      angles.forEach(([x, y]) => {
-        const dx = ((xRotation - x + 360) % 360) - 180;
-        const dy = ((yRotation - y + 360) % 360) - 180;
-        const dist = Math.abs(dx) + Math.abs(dy);
-        if (dist < minDist) {
-          minDist = dist;
-          target = [x, y];
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting && !entry.target.dataset.loaded) {
+          const videoId = entry.target.dataset.videoId;
+          const iframe = document.createElement('iframe');
+          iframe.src = `https://www.youtube.com/embed/${videoId}?autoplay=1&mute=1&controls=0&rel=0&playsinline=1&start=0`;
+          iframe.allow = "autoplay; encrypted-media";
+          entry.target.appendChild(iframe);
+          entry.target.dataset.loaded = "true";
         }
       });
-      xRotation = target[0];
-      yRotation = target[1];
-      updateCubeTransform();
-      updateYouTubePlayback();
-    }
-
-    function updateYouTubePlayback() {
-      const activeIndex = angles.findIndex(([x, y]) => x === xRotation && y === yRotation);
-      iframes.forEach((frame, i) => {
-        const command = i === activeIndex ? 'playVideo' : 'pauseVideo';
-        frame.contentWindow.postMessage(JSON.stringify({ event: 'command', func: command, args: [] }), '*');
-      });
-    }
-
-    function applyMomentum() {
-      momentumInterval = setInterval(() => {
-        if (Math.abs(velocityX) < 0.1 && Math.abs(velocityY) < 0.1) {
-          clearInterval(momentumInterval);
-          snapToNearestFace();
-          return;
-        }
-        xRotation += velocityY;
-        yRotation += velocityX;
-        velocityX *= 0.95;
-        velocityY *= 0.95;
-        updateCubeTransform();
-      }, 16);
-    }
-
-    document.addEventListener('mousedown', (e) => {
-      isDragging = true;
-      lastX = e.clientX;
-      lastY = e.clientY;
-      clearInterval(momentumInterval);
+    }, {
+      threshold: 0.5
     });
 
-    document.addEventListener('mousemove', (e) => {
-      if (!isDragging) return;
-      let dx = e.clientX - lastX;
-      let dy = e.clientY - lastY;
-      velocityX = dx * 0.3;
-      velocityY = dy * 0.3;
-      yRotation += dx * 0.5;
-      xRotation -= dy * 0.5;
-      lastX = e.clientX;
-      lastY = e.clientY;
-      updateCubeTransform();
-    });
-
-    document.addEventListener('mouseup', () => {
-      isDragging = false;
-      applyMomentum();
-    });
-
-    document.addEventListener('wheel', (e) => {
-      e.preventDefault();
-      scale += e.deltaY * -0.001;
-      scale = Math.min(Math.max(0.5, scale), 2);
-      updateCubeTransform();
-    }, { passive: false });
-
-    window.onload = () => {
-      updateCubeTransform();
-      updateYouTubePlayback();
-    };
+    containers.forEach(container => observer.observe(container));
   </script>
+
 </body>
 </html>
