--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <header>
     <!-- Replace this with your actual GIF -->
-    <img src="your-header.gif" alt="Header GIF">
+    <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExN2M0Z2NvNjlkaXB5M3ZubXl6bjJzMTk1ZTZ0emRkbDM4b24zZ3RnYyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/C5vR7fyscDw5iGew4I/giphy.gif" alt="Header GIF">
   </header>
 
   <div class="video-grid">
