--- a/index.html
+++ b/index.html
@@ -2,97 +2,85 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>YouTube Scroll Autoplay</title>
+  <title>YouTube Full-Screen Scroll</title>
   <style>
-    body {
+    html, body {
       margin: 0;
       padding: 0;
-      font-family: sans-serif;
-      background-color: #111;
+      background-color: #000;
       color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      font-family: sans-serif;
     }
 
     header {
-      margin: 20px 0;
       text-align: center;
+      padding: 10px 0;
     }
-
     header img {
       max-width: 100%;
       height: auto;
+      display: inline-block;
     }
 
-    .video-grid {
+    .video-list {
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 0.25in; /* quarter inch gap */
-      max-width: 1200px;
-      padding: 20px;
+      flex-direction: column;
+      align-items: center;
+      gap: 0.25in; /* quarter-inch between full-screen blocks */
+      scroll-snap-type: y mandatory;
     }
 
     .video-container {
-      flex: 1 1 calc(33.333% - 0.5in);
-      min-width: 300px;
-      max-width: 100%;
+      width: 100vw;
+      height: 100vh;
       position: relative;
-      background: #222;
-      height: 200px;
+      background: #111; /* slightly lighter so the video edges stand out */
       overflow: hidden;
+      scroll-snap-align: start;
     }
 
     .video-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
       border: none;
-    }
-
-    @media (max-width: 768px) {
-      .video-container {
-        flex: 1 1 100%;
-        height: 200px;
-      }
     }
   </style>
 </head>
 <body>
 
   <header>
-    <!-- Replace this with your actual GIF -->
-    <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExN2M0Z2NvNjlkaXB5M3ZubXl6bjJzMTk1ZTZ0emRkbDM4b24zZ3RnYyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/C5vR7fyscDw5iGew4I/giphy.gif" alt="Header GIF">
+    <!-- Your centered GIF header -->
+    <img src="your-header.gif" alt="Header GIF">
   </header>
 
-  <div class="video-grid">
-    <div class="video-container" data-video-id="hrgcRAryUaY"></div>
-    <div class="video-container" data-video-id="9SBnKTBPpME"></div>
-    <div class="video-container" data-video-id="B2CpcHIxaOw"></div>
-    <div class="video-container" data-video-id="dKlpKE7x7mY"></div>
-    <div class="video-container" data-video-id="eMiwRjiQpV4"></div>
-    <div class="video-container" data-video-id="7r_3tZ0SzDc"></div>
+  <div class="video-list">
+    <div class="video-container" data-id="hrgcRAryUaY"></div>
+    <div class="video-container" data-id="9SBnKTBPpME"></div>
+    <div class="video-container" data-id="B2CpcHIxaOw"></div>
+    <div class="video-container" data-id="dKlpKE7x7mY"></div>
+    <div class="video-container" data-id="eMiwRjiQpV4"></div>
+    <div class="video-container" data-id="7r_3tZ0SzDc"></div>
   </div>
 
   <script>
     const containers = document.querySelectorAll('.video-container');
-
-    const observer = new IntersectionObserver((entries) => {
+    const obs = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
         if (entry.isIntersecting && !entry.target.dataset.loaded) {
-          const videoId = entry.target.dataset.videoId;
+          const id = entry.target.dataset.id;
           const iframe = document.createElement('iframe');
-          iframe.src = `https://www.youtube.com/embed/${videoId}?autoplay=1&mute=1&controls=0&rel=0&playsinline=1&start=0`;
-          iframe.allow = "autoplay; encrypted-media";
+          iframe.src = `https://www.youtube.com/embed/${id}?autoplay=1&mute=1&controls=0&rel=0&playsinline=1`;
+          iframe.allow = 'autoplay; encrypted-media';
           entry.target.appendChild(iframe);
-          entry.target.dataset.loaded = "true";
+          entry.target.dataset.loaded = 'true';
         }
       });
-    }, {
-      threshold: 0.5
-    });
+    }, { threshold: 0.75 });
 
-    containers.forEach(container => observer.observe(container));
+    containers.forEach(c => obs.observe(c));
   </script>
 
 </body>
